Added Java options for tests under JDK 24